# playzerx

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  MTISerial.cpp  PlayzerX-All.sln  PlayzerX.cpp  PlayzerX.rc  PlayzerX.vcxproj  PlayzerXStub.cpp  PlayzerXStub.h  README.md  butterfly.smp  enumCOMs.cpp  resource.h
.github/workflows/: build-docs.yml  deploy-docs.yml  docs.yml  main.yml  playzerx-cd.yml  playzerx-ci.yml
.github/workflows/templates/: RELEASE.md
demo_source/: CMakeLists.txt  PlayzerX-Demo.cpp  PlayzerX-Demo.h  PlayzerX-Demo.sln  PlayzerX-Demo.vcxproj
docs/: Doxyfile  PlayzerX API Reference.rst  PlayzerX Programming Guide.rst  PlayzerX USB Serial Protocol.rst  PlayzerX-USB Serial Protocol.rst  conf.py  index.rst  requirements.txt
docs/_static/: custom.css
docs/scripts/: generate_scanningdemo_viz.py
include/: PlayzerX.h  PlayzerXDefinitions.h
lib/x64/: PlayzerX64.lib  PlayzerX64_d.lib
lib/x86/: PlayzerX.lib  PlayzerX_d.lib
mtidevice/include/: DspFilter.h  MTIDataGenerator.h  MTIDefinitions.h  MTIDevice.h
tools/: check_release_version.bat  check_release_version.ps1  linux_build_repo.sh  run_clang_format.bat  run_clang_format.sh  windows_build_repo.bat
